--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
       <version> 42.6.0 </version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>serveletTest</finalName>
