[feat] - adicionando funcao de retornar produtos inativos

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,13 +41,23 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   </servlet-mapping>
 
   <servlet>
-    <servlet-name> ProductsConsultarServletLativo </servlet-name>
+    <servlet-name> ProductsConsultarServletLativoTrue </servlet-name>
     <servlet-class>com.pedro.application.servlets.ProductsConsultarLativoTrue</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name> ProductsConsultarServletLativo </servlet-name>
+    <servlet-name> ProductsConsultarServletLativoTrue </servlet-name>
     <url-pattern> /products/lativoTrue </url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name> ProductsConsultarServletLativoFalse </servlet-name>
+    <servlet-class>com.pedro.application.servlets.ProductsConsultarLativoFalse</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name> ProductsConsultarServletLativoFalse </servlet-name>
+    <url-pattern> /products/lativoFalse </url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -59,6 +69,5 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
     <servlet-name> ProductsConsultarServletLativoOne </servlet-name>
     <url-pattern> /products/lativoTrueOne/* </url-pattern>
   </servlet-mapping>
-
 
 </web-app>
